# quickwit-splits4java

./: CLAUDE.md  README.md  pom.xml
examples/: GenerateSplit.java  ReadSplit.java
rust/: Cargo.toml  build.rs
rust/src/: error.rs  hotcache.rs  jni_bridge.rs  lib.rs  split_generator.rs  split_reader.rs
src/main/java/com/tantivy4java/splits/: ByteRange.java  FieldType.java  HotcacheInfo.java  QuickwitSplitGenerator.java  QuickwitSplitReader.java  QuickwitSplits.java  SplitMetadata.java
src/test/java/com/tantivy4java/splits/: QuickwitSplitGeneratorTest.java  QuickwitSplitReaderTest.java  QuickwitSplitsIntegrationTest.java
